# lcb

./: .gitignore  README.md  pyproject.toml
src/lcb/: __init__.py  auth.py  cli.py  clipboard.py  config.py  sheets.py
